--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/ab5d420f2f.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -33,9 +32,7 @@
 <div id="about">
     <div class="container">
         <div class="row">
-            <div class="about-col-1">
-                <img src="User.png" alt="Supakit is working for Panyapiwat Institute of Management EEC Campus Student Club">
-            
+            <div class="about-col-1"> 
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -105,7 +102,6 @@
        <h1 class="sub-title">My Work</h1>
        <div class="work-list">
             <div class="work">
-                <img src="Allcaring.jpg" alt="Allcaring">
                 <div class="layer">
                     <h3>All Caring</h3>
                     <p>1st Prize : INNOVAION Form Hackathon U League for all 2022
@@ -115,7 +111,6 @@
                 </div>
             </div>
             <div class="work">
-                <img src="TIA_BOT Pharmacy.png" alt="Pharmacy">
                 <div class="layer">
                     <h3>Bot Pharmacy</h3>
                     <p>ผ่านการคัดเลือกเข้าร่วมการประกวดรางวัลนวัตกรรมแห่งประเทศไทย ครั้งที่ 22 2022โครงการ STEAM 4 INNOVATOR
@@ -125,7 +120,6 @@
                 </div>
             </div>
             <div class="work">
-                <img src="Est.png" alt="HomePage Est Serend Engineering Co.,Ltd.">
                 <div class="layer">
                     <h3>HomePage Est Serend Engineering Co.,Ltd.</h3>
                     <p>พัฒนาเว็บไซต์ Homepage และเขียน Blog ให้กับบริษัท Est Serend Engineering Co.,Ltd.
@@ -139,7 +133,7 @@
     </div>
 </div>
     <div class="copyright">
-        <p>Copyright @ 130fit. Made for <i class="fa-solid fa-briefcase"></i> apply for work</p>
+        <p>Copyright @ 130fit. Made for <i class="fa-solid fa-briefcase"></i></p>
     </div>
 </div>
 
