--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
     <title>Profile</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/ab5d420f2f.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <style type="text/css">
+        .img-circle {
+    width: 200px;
+        height: 200px;
+        border-radius: 100%;
+    }
+    body
+{
+    background: #080808;
+    color: #fff;
+}
+    .Report
+    {
+        font-size: 20px;
+        font-weight: 500;
+        color: #f004f0;
+        margin-bottom: 200px;
+    }
+    </style>
 <div id="header">
     <div class="container">
         <nav>
@@ -25,6 +45,7 @@
         <div class="header-text">
             <p>Student of Bachelor's degree in digital technology and information</p>
             <h1>Hello, I'm <span>Supakit Buadokmai</span><br>From PIM EEC</h1>
+            <a class="Report" href="report.html">Link to Report</a>
         </div>
     </div>
 </div>
@@ -32,7 +53,9 @@
 <div id="about">
     <div class="container">
         <div class="row">
-            <div class="about-col-1"> 
+            <div class="about-col-1">
+                <img class="img-circle" src="User.png" alt="Supakit is working for Panyapiwat Institute of Management EEC Campus Student Club">
+            
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -132,10 +155,77 @@
        <a href="#" class="btn">See more</a>
     </div>
 </div>
+<!-- -----contact----- -->
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-sharp fa-solid fa-paper-plane"></i> ssboatss03@hotmail.com</p>
+                <p><i class="fa-solid fa-phone"></i> 0889905652</p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/profile.php?id=100004037014540"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/130fit/"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+                <a href="Super Resume _ Reflect your talent and get a better job.pdf" download class="btn btn2">Dowload Resume</a>
+            </div>
+            <div class="contact-right">
+                <form name="submit-to-google-sheet">
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="email" placeholder="Your Email"required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
+                </form>
+                <span id="msg">Thanks for Message</span>
+            </div>
+        </div>
+    </div>
     <div class="copyright">
-        <p>Copyright @ 130fit. Made for <i class="fa-solid fa-briefcase"></i></p>
+        <p>Copyright @ 130fit. Made for <i class="fa-solid fa-briefcase"></i> apply for work</p>
     </div>
 </div>
-
+<script>
+    var tablinks = document.getElementsByClassName("tab-links")
+    var tabcontents = document.getElementsByClassName("tab-contents")
+  
+    function opentab(tabname)
+    {
+        for(tablink of tablinks)
+        {
+            tablink.classList.remove("active-link");
+        }
+        for(tabcontent of tabcontents)
+        {
+            tabcontent.classList.remove("active-tab");
+        }
+        event.currentTarget.classList.add("active-link");
+        document.getElementById(tabname).classList.add("active-tab");
+    }
+</script>
+<script>
+    var sidemeu = document.getElementById("sidemenu");
+    function openmenu()
+    {
+        sidemeu.style.right = "0";
+    }
+    function closemenu()
+    {
+        sidemeu.style.right = "-200px";
+    }
+</script>
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyHKbeWVyqkYoX88D2UGuvlw_rNIZH0Wfcv_smj6xxK62U1P0w00ARJ7wqiXiMFNO0/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById("msg")
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {msg.innerHTML = "Message sent successfully"})
+        setTimeout(function()
+        {msg.innerHTML=""},5000)
+        form.reset()
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </body>
 </html>
