--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </nav>
         <div class="header-text">
             <p>Student of Bachelor's degree in digital technology and information</p>
-            <h1>Hello, I'm <span>Supakit Buadokmai</span><br>From PIM EEC</h1>
+            <h1>Hello, I'm <span>Supakit Buadokmai</span><br>From <a href ="http://pim.ac.th">PIM EEC<a></h1>
             <a class="Report" href="report.html">Link to Report</a>
         </div>
     </div>
