--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-sharp fa-solid fa-paper-plane"></i> ssboatss03@hotmail.com</p>
-                <p><i class="fa-solid fa-phone"></i> 0889905652</p>
+                <p><i class="fa-sharp fa-solid fa-paper-plane"></i>645210100@stu.pim.ac.th</p>
+                <p><i class="fa-solid fa-phone"></i> 088990xxxxxx</p>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/profile.php?id=100004037014540"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/130fit/"><i class="fa-brands fa-instagram"></i></a>
